# silithium

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml  rust-clippy.yml
src/: lib.rs
